@startuml MD

skinparam classAttributeIconSize 0
hide methods
left to right direction

class Transaction {

}

class PaymentScheduler {
        - Integer dayMonth
        - LocalTime timeOfDay
}

class Organization {
        - String name
        - String NIF
}

class TaskExecutionDetails {
        - Date endDate
        - Integer delayInDays
        - String DescriptionQualityOfWork
}

class App {

}

class Freelancer {
        - String id
        - String name
        - String levelOfExpertise
        - String email
        - String NIF
        - String bankAccountIBAN
        - String address
        - String country
}

class Task {
        - String id
        - String description
        - Integer durationInHours
        - Double costPerHourOfJuniorEur
        - String category
}

class PaymentDetails {
        - Boolean isPaid
}

Transaction                  "1" -- "1"      Task                      : relative to>
Transaction                  "*" -- "1"      Freelancer                : to >
Transaction                  "*" -- "1"      PaymentAPI                : uses >
Transaction                  "*" -- "1"      Organization              : made on behalf of >
Transaction                  "1" -- "1"      TaskExecutionDetails      : executed with >
TaskExecutionDetails         "1" -- "1"      Task                      : refers to>
PaymentScheduler             "1" -- "*"      Transaction               : schedules payments>
Organization                 "1" -- "1"      PaymentScheduler          : uses >
Organization                 "1" -- "*"      Task                      : publishes >
Organization                 "1" -- "*"      Transaction               : has >
Task                         "*" -- "0, 1"   Freelancer                : executed by >
App                          "1" -- "1"      MonetaryUnitConversionAPI : supports >
App                          "1" -- "*"      Organization              : has >
App                          "1" -- "1"      EmailAPI                  : supports >
App                          "1" -- "1"      PaymentAPI                : supports >
EmailAPI                     "1" -- "*"      Freelancer                : e-mails >
(Organization, Transaction)      ..          PaymentDetails


@enduml